ncc/testsuite/negative/comp-branch.n
mutable x = 3;
if (3 > 4) x = 3 else true; // E: expected void, got bool in computation branch
